--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,22 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>FinalProjeckt</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/" />
+  <title>Final</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- bootstrap css -->
+  <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Google font -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link type="text/css" rel="stylesheet" href="/assets/css/bootstrap.min.css"/>
+  <!-- Custom stlylesheet -->
+  <link type="text/css" rel="stylesheet" href="/assets/css/style.css"/>
 </head>
 <body>
-  <app-root></app-root>
+<app>Loading...</app>
 </body>
 </html>
